--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="front pocket"></div>
                 <div class="letter">
             <center><p class="words line1">HAPPY MONTHSARYYY!!</p></center> 
-            <center><p class="words line2">I love you always and I'm always her for you. </p> </center>
+            <center><p class="words line2">I love you always and I'm always here for you. </p> </center>
                     <p class="words line3"></p>
                     <p class="words line4">hulian here</p>
                 </div>
