--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button id="open">Open</button>
             <button id="reset">Reset</button>
         </div>
-        <h1 class="valentine">Happy Valentine's Day!</h1>
+        <h1 class="valentine">Happy Monthsary!!</h1>
         <script src="index.js"></script>
     </body>
 </html>
